# thermax-planmax

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml
docs/: index.md  modules.md
tests/: test_foo.py
thermax_planmax/: __init__.py  config.py
thermax_planmax/dashboards/: PlanMax.json  PlanMaxDetailAllColumns.json  PlanMaxMasterAllColumns.json  demo.json  master_plan.json  planning.json
thermax_planmax/data_objects/: calender.py  customers.py  department.py  di_details.py  employee.py  headers.py  inventory_items.py  invoice_headers.py  lines.py  model_xref.py  operating_units.py  order_headers.py  order_lines.py  order_types.py  organizations.py  planmax_headers.py  planmax_lines.py  prn_details.py  project_po_details.py  tech_ocl_lines.py  tech_ocl_master.py  tech_ocl_specs.py
thermax_planmax/views/: customer_orders.py  di_details.py  di_details_view.py  master_plan_details.py  master_plan_details_view.py  master_plan_headers.py  master_plan_headers_view.py  order_header_view.py  order_lines_view.py  prn_details_view.py  relations.py  rolling_plan.py  rolling_plan_view.py  tech_ocl_lines_view.py  v2_detail_plan.py  v2_di_details.py  v2_master_plan.py  v2_relations.py  v2_rolling_plan.py  v2_tech_ocl.py
